Site checkin for project SoEBeS Maven Parent POM

--- a/plugin-updates-report.html
+++ b/plugin-updates-report.html
@@ -84,7 +84,7 @@
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td># of plugins using the latest version available</td>
-<td>33</td></tr>
+<td>34</td></tr>
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is smaller than an incremental version update</td>
@@ -92,7 +92,7 @@
 <tr class="a">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is an incremental version update</td>
-<td>3</td></tr>
+<td>2</td></tr>
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is a minor version update</td>
@@ -409,12 +409,12 @@
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
 <tr class="a">
-<td><img src="images/icon_warning_sml.gif" alt="" /></td>
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>org.codehaus.mojo</td>
 <td>appassembler-maven-plugin</td>
-<td>1.8</td>
-<td></td>
 <td><b>1.8.1</b></td>
+<td></td>
+<td></td>
 <td></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
@@ -1000,7 +1000,7 @@
 <table border="0" class="bodyTable">
 <tr class="a">
 <th width="80%">Status</th>
-<td><img src="images/icon_warning_sml.gif" alt="" />&#160;There is at least one newer incremental version available. Incremental updates are typically passive.</td></tr>
+<td><img src="images/icon_success_sml.gif" alt="" />&#160;No newer versions available.</td></tr>
 <tr class="b">
 <th width="80%">Group Id</th>
 <td>org.codehaus.mojo</td></tr>
@@ -1009,10 +1009,7 @@
 <td>appassembler-maven-plugin</td></tr>
 <tr class="b">
 <th width="80%">Current Version</th>
-<td>1.8</td></tr>
-<tr class="a">
-<th width="80%">Newer versions</th>
-<td><b>1.8.1</b>&#160;<i>Next Incremental</i></td></tr></table></div>
+<td>1.8.1</td></tr></table></div>
 <div class="section">
 <h3><a name="Plugin_org.codehaus.mojo:build-helper-maven-plugin"></a>Plugin org.codehaus.mojo:build-helper-maven-plugin</h3>
 <table border="0" class="bodyTable">
