--- a/property-updates-report.html
+++ b/property-updates-report.html
@@ -84,7 +84,7 @@
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td># of properties using the latest version available</td>
-<td>38</td></tr>
+<td>39</td></tr>
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of properties where the next version available is smaller than an incremental version update</td>
@@ -92,7 +92,7 @@
 <tr class="a">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of properties where the next version available is an incremental version update</td>
-<td>3</td></tr>
+<td>2</td></tr>
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of properties where the next version available is a minor version update</td>
@@ -113,11 +113,11 @@
 <th>Next Minor</th>
 <th>Next Major</th></tr>
 <tr class="a">
-<td><img src="images/icon_warning_sml.gif" alt="" /></td>
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${appassembler-maven-plugin.version}</td>
-<td>1.8</td>
+<td>1.8.1</td>
 <td></td>
-<td><b>1.8.1</b></td>
+<td></td>
 <td></td>
 <td></td></tr>
 <tr class="b">
@@ -505,7 +505,7 @@
 <table border="0" class="bodyTable">
 <tr class="a">
 <th width="80%">Status</th>
-<td><img src="images/icon_warning_sml.gif" alt="" />&#160;There is at least one newer incremental version available. Incremental updates are typically passive.</td></tr>
+<td><img src="images/icon_success_sml.gif" alt="" />&#160;No newer versions available.</td></tr>
 <tr class="b">
 <th width="80%">Property</th>
 <td>${appassembler-maven-plugin.version}</td></tr>
@@ -514,23 +514,20 @@
 <td>org.codehaus.mojo:appassembler-maven-plugin</td></tr>
 <tr class="b">
 <th width="80%">Current Version</th>
-<td>1.8</td></tr>
+<td>1.8.1</td></tr>
 <tr class="a">
-<th width="80%">Newer versions</th>
-<td><b>1.8.1</b>&#160;<i>Next Incremental</i></td></tr>
-<tr class="b">
 <th width="80%">Allowed version range</th>
 <td>[,)</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Infer associations from project</th>
 <td>Yes</td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Only use release versions</th>
 <td>No</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Include projects from reactor</th>
 <td>Yes</td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Always use reactor projects (even if older or -SNAPSHOT)</th>
 <td>Yes</td></tr></table></div>
 <div class="section">
