--- a/changes-report.html
+++ b/changes-report.html
@@ -29,7 +29,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2014-07-22</span>
-                  &nbsp;| <span id="projectVersion">Version: 0.6.5-SNAPSHOT</span>
+                  &nbsp;| <span id="projectVersion">Version: 0.6.5</span>
                       </div>
             <div class="xright">                    <a href="./" title="SoEBeS Maven Parent POM">SoEBeS Maven Parent POM</a>
               
