--- a/plugin-updates-report.html
+++ b/plugin-updates-report.html
@@ -28,7 +28,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2014-07-22</span>
-                  &nbsp;| <span id="projectVersion">Version: 0.6.5-SNAPSHOT</span>
+                  &nbsp;| <span id="projectVersion">Version: 0.6.5</span>
                       </div>
             <div class="xright">                    <a href="./" title="SoEBeS Maven Parent POM">SoEBeS Maven Parent POM</a>
               
@@ -84,7 +84,7 @@
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td># of plugins using the latest version available</td>
-<td>34</td></tr>
+<td>35</td></tr>
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is smaller than an incremental version update</td>
@@ -490,26 +490,56 @@
 <th>Dependency status</th></tr></table></div>
 <div class="section">
 <h3><a name="Plugins"></a>Plugins</h3>
-<p>This project does not declare any plugins in a build/plugins setcion.</p></div></div>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>Status</th>
+<th>Group Id</th>
+<th>Artifact Id</th>
+<th>Current Version</th>
+<th>Next Version</th>
+<th>Next Incremental</th>
+<th>Next Minor</th>
+<th>Next Major</th>
+<th>Dependency status</th></tr>
+<tr class="b">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>org.apache.maven.plugins</td>
+<td>maven-gpg-plugin</td>
+<td><b>1.5</b></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
+<tr class="a">
+<th>Status</th>
+<th>Group Id</th>
+<th>Artifact Id</th>
+<th>Current Version</th>
+<th>Next Version</th>
+<th>Next Incremental</th>
+<th>Next Minor</th>
+<th>Next Major</th>
+<th>Dependency status</th></tr></table></div></div>
 <div class="section">
 <h2><a name="Plugin_Updates"></a>Plugin Updates</h2>
 <p></p>
 <div class="section">
 <h3><a name="Plugin_com.mycila.maven-license-plugin:maven-license-plugin"></a>Plugin com.mycila.maven-license-plugin:maven-license-plugin</h3>
 <table border="0" class="bodyTable">
-<tr class="a">
+<tr class="b">
 <th width="80%">Status</th>
 <td><img src="images/icon_warning_sml.gif" alt="" />&#160;There is at least one newer incremental version available. Incremental updates are typically passive.</td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Group Id</th>
 <td>com.mycila.maven-license-plugin</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Artifact Id</th>
 <td>maven-license-plugin</td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Current Version</th>
 <td>1.9.0</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Newer versions</th>
 <td><b>1.10.b1</b>&#160;<i>Next Incremental</i></td></tr></table></div>
 <div class="section">
@@ -710,6 +740,21 @@
 <tr class="b">
 <th width="80%">Current Version</th>
 <td>2.17</td></tr></table></div>
+<div class="section">
+<h3><a name="Plugin_org.apache.maven.plugins:maven-gpg-plugin"></a>Plugin org.apache.maven.plugins:maven-gpg-plugin</h3>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th width="80%">Status</th>
+<td><img src="images/icon_success_sml.gif" alt="" />&#160;No newer versions available.</td></tr>
+<tr class="b">
+<th width="80%">Group Id</th>
+<td>org.apache.maven.plugins</td></tr>
+<tr class="a">
+<th width="80%">Artifact Id</th>
+<td>maven-gpg-plugin</td></tr>
+<tr class="b">
+<th width="80%">Current Version</th>
+<td>1.5</td></tr></table></div>
 <div class="section">
 <h3><a name="Plugin_org.apache.maven.plugins:maven-install-plugin"></a>Plugin org.apache.maven.plugins:maven-install-plugin</h3>
 <table border="0" class="bodyTable">
