--- a/project-summary.html
+++ b/project-summary.html
@@ -28,7 +28,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2014-07-22</span>
-                  &nbsp;| <span id="projectVersion">Version: 0.6.5-SNAPSHOT</span>
+                  &nbsp;| <span id="projectVersion">Version: 0.6.5</span>
                       </div>
             <div class="xright">                    <a href="./" title="SoEBeS Maven Parent POM">SoEBeS Maven Parent POM</a>
               
@@ -138,7 +138,7 @@
 <td>smpp</td></tr>
 <tr class="b">
 <td>Version</td>
-<td>0.6.5-SNAPSHOT</td></tr>
+<td>0.6.5</td></tr>
 <tr class="a">
 <td>Type</td>
 <td>pom</td></tr></table></div></div>
