--- a/property-updates-report.html
+++ b/property-updates-report.html
@@ -28,7 +28,7 @@
                     
                 <div class="xleft">
         <span id="publishDate">Last Published: 2014-07-22</span>
-                  &nbsp;| <span id="projectVersion">Version: 0.6.5-SNAPSHOT</span>
+                  &nbsp;| <span id="projectVersion">Version: 0.6.5</span>
                       </div>
             <div class="xright">                    <a href="./" title="SoEBeS Maven Parent POM">SoEBeS Maven Parent POM</a>
               
@@ -84,7 +84,7 @@
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td># of properties using the latest version available</td>
-<td>39</td></tr>
+<td>40</td></tr>
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of properties where the next version available is smaller than an incremental version update</td>
@@ -162,16 +162,16 @@
 <td></td></tr>
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>${maven-ear-plugin.version}</td>
-<td>2.9.1</td>
+<td>${maven-jar-plugin.version}</td>
+<td>2.5</td>
 <td></td>
 <td></td>
 <td></td>
 <td></td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
-<td>${maven-jar-plugin.version}</td>
-<td>2.5</td>
+<td>${maven-ear-plugin.version}</td>
+<td>2.9.1</td>
 <td></td>
 <td></td>
 <td></td>
@@ -378,13 +378,21 @@
 <td></td></tr>
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>${maven-gpg-plugin.version}</td>
+<td>1.5</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${maven-dependency-plugin.version}</td>
 <td>2.8</td>
 <td></td>
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="a">
+<tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${maven-clean-plugin.version}</td>
 <td>2.5</td>
@@ -392,7 +400,7 @@
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="b">
+<tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${maven-failsafe-plugin.version}</td>
 <td>2.17</td>
@@ -400,7 +408,7 @@
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="a">
+<tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${maven-changes-plugin.version}</td>
 <td>2.10</td>
@@ -408,7 +416,7 @@
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="b">
+<tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${maven-deploy-plugin.version}</td>
 <td>2.8.1</td>
@@ -416,7 +424,7 @@
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="a">
+<tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${maven-ejb-plugin.version}</td>
 <td>2.3</td>
@@ -424,7 +432,7 @@
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="b">
+<tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${maven-resources-plugin.version}</td>
 <td>2.6</td>
@@ -432,7 +440,7 @@
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="a">
+<tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${maven-compiler-plugin.version}</td>
 <td>3.1</td>
@@ -440,7 +448,7 @@
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="b">
+<tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${buildnumber-maven-plugin.version}</td>
 <td>1.3</td>
@@ -448,7 +456,7 @@
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="a">
+<tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>${maven-project-info-reports-plugin.version}</td>
 <td>2.7</td>
@@ -456,7 +464,7 @@
 <td></td>
 <td></td>
 <td></td></tr>
-<tr class="b">
+<tr class="a">
 <th>Status</th>
 <th>Property</th>
 <th>Current Version</th>
@@ -470,34 +478,34 @@
 <div class="section">
 <h3><a name="aantlr3-maven-plugin.version"></a>${antlr3-maven-plugin.version}</h3>
 <table border="0" class="bodyTable">
-<tr class="a">
+<tr class="b">
 <th width="80%">Status</th>
 <td><img src="images/icon_warning_sml.gif" alt="" />&#160;There is at least one newer incremental version available. Incremental updates are typically passive.</td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Property</th>
 <td>${antlr3-maven-plugin.version}</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Associated artifacts</th>
 <td>org.antlr:antlr3-maven-plugin</td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Current Version</th>
 <td>3.5</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Newer versions</th>
 <td><b>3.5.1</b>&#160;<i>Next Incremental</i><br /><b>3.5.2</b>&#160;<i>Latest Incremental</i></td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Allowed version range</th>
 <td>[,)</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Infer associations from project</th>
 <td>Yes</td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Only use release versions</th>
 <td>No</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Include projects from reactor</th>
 <td>Yes</td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Always use reactor projects (even if older or -SNAPSHOT)</th>
 <td>Yes</td></tr></table></div>
 <div class="section">
@@ -1085,6 +1093,36 @@
 <tr class="b">
 <th width="80%">Current Version</th>
 <td>2.17</td></tr>
+<tr class="a">
+<th width="80%">Allowed version range</th>
+<td>[,)</td></tr>
+<tr class="b">
+<th width="80%">Infer associations from project</th>
+<td>Yes</td></tr>
+<tr class="a">
+<th width="80%">Only use release versions</th>
+<td>No</td></tr>
+<tr class="b">
+<th width="80%">Include projects from reactor</th>
+<td>Yes</td></tr>
+<tr class="a">
+<th width="80%">Always use reactor projects (even if older or -SNAPSHOT)</th>
+<td>Yes</td></tr></table></div>
+<div class="section">
+<h3><a name="amaven-gpg-plugin.version"></a>${maven-gpg-plugin.version}</h3>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th width="80%">Status</th>
+<td><img src="images/icon_success_sml.gif" alt="" />&#160;No newer versions available.</td></tr>
+<tr class="b">
+<th width="80%">Property</th>
+<td>${maven-gpg-plugin.version}</td></tr>
+<tr class="a">
+<th width="80%">Associated artifacts</th>
+<td>org.apache.maven.plugins:maven-gpg-plugin</td></tr>
+<tr class="b">
+<th width="80%">Current Version</th>
+<td>1.5</td></tr>
 <tr class="a">
 <th width="80%">Allowed version range</th>
 <td>[,)</td></tr>
