--- a/source-repository.html
+++ b/source-repository.html
@@ -275,15 +275,15 @@
 <div class="section">
 <h2><a name="Web_Browser_Access"></a>Web Browser Access</h2><a name="Web_Browser_Access"></a>
 <p>The following is a link to a browsable version of the source repository:</p>
-<div class="source"><pre class="prettyprint"><a class="externalLink" href="http://khmarbaise.github.com/smpp/">http://khmarbaise.github.com/smpp/</a></pre></div></div>
+<div class="source"><pre class="prettyprint"><a class="externalLink" href="https://github.com/khmarbaise/smpp">https://github.com/khmarbaise/smpp</a></pre></div></div>
 <div class="section">
 <h2><a name="Anonymous_Access"></a>Anonymous Access</h2><a name="Anonymous_Access"></a>
 <p>The source can be checked out anonymously from Git with this command (See <a class="externalLink" href="http://git-scm.com/docs/git-clone">http://git-scm.com/docs/git-clone</a>):</p>
-<div class="source"><pre class="prettyprint">$ git clone git://github.com/khmarbaise/smpp.git</pre></div></div>
+<div class="source"><pre class="prettyprint">$ git clone https://github.com/khmarbaise/smpp.git</pre></div></div>
 <div class="section">
 <h2><a name="Developer_Access"></a>Developer Access</h2><a name="Developer_Access"></a>
 <p>Only project developers can access the Git tree via this method (See <a class="externalLink" href="http://git-scm.com/docs/git-clone">http://git-scm.com/docs/git-clone</a>).</p>
-<div class="source"><pre class="prettyprint">$ git clone git@github.com:khmarbaise/smpp.git</pre></div></div>
+<div class="source"><pre class="prettyprint">$ git clone ssh://git@github.com/khmarbaise/smpp.git</pre></div></div>
 <div class="section">
 <h2><a name="Access_from_Behind_a_Firewall"></a>Access from Behind a Firewall</h2><a name="Access_from_Behind_a_Firewall"></a>
 <p>Refer to the documentation of the SCM used for more information about access behind a firewall.</p></div>
