--- a/plugin-updates-report.html
+++ b/plugin-updates-report.html
@@ -133,7 +133,7 @@
                   <li id="publishDate">Last Published: 2016-02-27
                       <span class="divider">|</span>
                    </li>
-                  <li id="projectVersion">Version: 2.0.0-SNAPSHOT
+                  <li id="projectVersion">Version: 2.0.0
                       </li>
                       
                 
@@ -241,7 +241,7 @@
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td># of plugins using the latest version available</td>
-<td>32</td></tr>
+<td>33</td></tr>
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is smaller than an incremental version update</td>
@@ -637,23 +637,53 @@
 <th>Dependency status</th></tr></table></div>
 <div class="section">
 <h3><a name="Plugins"></a>Plugins</h3>
-<p>This project does not declare any plugins in a build/plugins setcion.</p></div></div>
+<table border="0" class="table table-striped">
+<tr class="b">
+<th>Status</th>
+<th>Group Id</th>
+<th>Artifact Id</th>
+<th>Current Version</th>
+<th>Next Version</th>
+<th>Next Incremental</th>
+<th>Next Minor</th>
+<th>Next Major</th>
+<th>Dependency status</th></tr>
+<tr class="a">
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td>org.apache.maven.plugins</td>
+<td>maven-gpg-plugin</td>
+<td><b>1.6</b></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
+<tr class="b">
+<th>Status</th>
+<th>Group Id</th>
+<th>Artifact Id</th>
+<th>Current Version</th>
+<th>Next Version</th>
+<th>Next Incremental</th>
+<th>Next Minor</th>
+<th>Next Major</th>
+<th>Dependency status</th></tr></table></div></div>
 <div class="section">
 <h2><a name="Plugin_Updates"></a>Plugin Updates</h2>
 <p></p>
 <div class="section">
 <h3><a name="Plugin_org.apache.maven.plugins:maven-antrun-plugin"></a>Plugin org.apache.maven.plugins:maven-antrun-plugin</h3>
 <table border="0" class="table table-striped">
-<tr class="b">
+<tr class="a">
 <th width="80%">Status</th>
 <td><img src="images/icon_success_sml.gif" alt="" />&#160;No newer versions available.</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Group Id</th>
 <td>org.apache.maven.plugins</td></tr>
-<tr class="b">
+<tr class="a">
 <th width="80%">Artifact Id</th>
 <td>maven-antrun-plugin</td></tr>
-<tr class="a">
+<tr class="b">
 <th width="80%">Current Version</th>
 <td>1.8</td></tr></table></div>
 <div class="section">
@@ -824,6 +854,21 @@
 <tr class="b">
 <th width="80%">Current Version</th>
 <td>2.19.1</td></tr></table></div>
+<div class="section">
+<h3><a name="Plugin_org.apache.maven.plugins:maven-gpg-plugin"></a>Plugin org.apache.maven.plugins:maven-gpg-plugin</h3>
+<table border="0" class="table table-striped">
+<tr class="a">
+<th width="80%">Status</th>
+<td><img src="images/icon_success_sml.gif" alt="" />&#160;No newer versions available.</td></tr>
+<tr class="b">
+<th width="80%">Group Id</th>
+<td>org.apache.maven.plugins</td></tr>
+<tr class="a">
+<th width="80%">Artifact Id</th>
+<td>maven-gpg-plugin</td></tr>
+<tr class="b">
+<th width="80%">Current Version</th>
+<td>1.6</td></tr></table></div>
 <div class="section">
 <h3><a name="Plugin_org.apache.maven.plugins:maven-install-plugin"></a>Plugin org.apache.maven.plugins:maven-install-plugin</h3>
 <table border="0" class="table table-striped">
