--- a/project-summary.html
+++ b/project-summary.html
@@ -133,7 +133,7 @@
                   <li id="publishDate">Last Published: 2016-02-27
                       <span class="divider">|</span>
                    </li>
-                  <li id="projectVersion">Version: 2.0.0-SNAPSHOT
+                  <li id="projectVersion">Version: 2.0.0
                       </li>
                       
                 
@@ -312,7 +312,7 @@
 <td>smpp</td></tr>
 <tr class="b">
 <td>Version</td>
-<td>2.0.0-SNAPSHOT</td></tr>
+<td>2.0.0</td></tr>
 <tr class="a">
 <td>Type</td>
 <td>pom</td></tr></table></div></div>
