--- a/usage.html
+++ b/usage.html
@@ -135,7 +135,7 @@
                   <li id="publishDate">Last Published: 2016-02-27
                       <span class="divider">|</span>
                    </li>
-                  <li id="projectVersion">Version: 2.0.0-SNAPSHOT
+                  <li id="projectVersion">Version: 2.0.0
                       </li>
                       
                 
