--- a/github-report.html
+++ b/github-report.html
@@ -268,6 +268,16 @@
 <th>Updated</th>
 <th>Fix Version</th></tr>
 <tr class="b">
+<td><a class="externalLink" href="https://github.com/khmarbaise/smpp/issues/21">21</a></td>
+<td>&#160;</td>
+<td>Get scm-publish:publish-scm working</td>
+<td>&#160;</td>
+<td>khmarbaise</td>
+<td>closed</td>
+<td>2016-05-06</td>
+<td>2016-05-06</td>
+<td>2.1.0</td></tr>
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/khmarbaise/smpp/issues/20">20</a></td>
 <td>&#160;</td>
 <td>Added reporting for maven-plugin-plugin</td>
@@ -277,7 +287,7 @@
 <td>2016-05-06</td>
 <td>2016-05-06</td>
 <td>2.1.0</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/khmarbaise/smpp/issues/18">18</a></td>
 <td>&#160;</td>
 <td>Updated maven-shade-plugin to 2.4.2</td>
@@ -287,7 +297,7 @@
 <td>2016-05-06</td>
 <td>2016-05-06</td>
 <td>2.1.0</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/khmarbaise/smpp/issues/17">17</a></td>
 <td>&#160;</td>
 <td>Upgrade maven-fluido-skin to 1.5</td>
@@ -297,7 +307,7 @@
 <td>2016-05-06</td>
 <td>2016-05-06</td>
 <td>2.1.0</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/khmarbaise/smpp/issues/16">16</a></td>
 <td>&#160;</td>
 <td>Upgrade maven-project-info-reports-plugin from 2.8.1 to 2.9</td>
@@ -307,7 +317,7 @@
 <td>2016-05-06</td>
 <td>2016-05-06</td>
 <td>2.1.0</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/khmarbaise/smpp/issues/15">15</a></td>
 <td>&#160;</td>
 <td>Upgrade maven-changes-plugin from 2.11 to 2.12</td>
