Site checkin for project SoEBeS Maven Parent POM

--- a/github-report.html
+++ b/github-report.html
@@ -141,7 +141,7 @@
                   <li id="publishDate">Last Published: 2016-06-05
                       <span class="divider">|</span>
                    </li>
-                  <li id="projectVersion">Version: 2.1.2
+                  <li id="projectVersion">Version: 2.1.3
                       </li>
                       
               
@@ -268,35 +268,15 @@
 <th>Updated</th>
 <th>Fix Version</th></tr>
 <tr class="b">
-<td><a class="externalLink" href="https://github.com/khmarbaise/smpp/issues/27">27</a></td>
+<td><a class="externalLink" href="https://github.com/khmarbaise/smpp/issues/28">28</a></td>
 <td>&#160;</td>
-<td>Added missing configuration for maven-plugin-plugin</td>
+<td>Include open issues in GitHub Report.</td>
 <td>&#160;</td>
 <td>khmarbaise</td>
 <td>closed</td>
 <td>2016-06-05</td>
 <td>2016-06-05</td>
-<td>2.1.2</td></tr>
-<tr class="a">
-<td><a class="externalLink" href="https://github.com/khmarbaise/smpp/issues/26">26</a></td>
-<td>&#160;</td>
-<td>Upgrade dependencies</td>
-<td>&#160;</td>
-<td>khmarbaise</td>
-<td>closed</td>
-<td>2016-06-04</td>
-<td>2016-06-04</td>
-<td>2.1.2</td></tr>
-<tr class="b">
-<td><a class="externalLink" href="https://github.com/khmarbaise/smpp/issues/25">25</a></td>
-<td>&#160;</td>
-<td>Upgrade plugins</td>
-<td>&#160;</td>
-<td>khmarbaise</td>
-<td>closed</td>
-<td>2016-05-28</td>
-<td>2016-05-28</td>
-<td>2.1.2</td></tr></table></div>
+<td>2.1.3</td></tr></table></div>
                   </div>
             </div>
           </div>
