--- a/smpp-boot/plugins.html
+++ b/smpp-boot/plugins.html
@@ -83,7 +83,7 @@
           <ul class="breadcrumb">
         <li id="publishDate">Last Published: 2022-02-06<span class="divider">|</span>
 </li>
-          <li id="projectVersion">Version: 5.3.6</li>
+          <li id="projectVersion">Version: 5.3.7</li>
           </ul>
         </div>
       </header>
@@ -142,12 +142,20 @@
 <td>3.0.0</td></tr>
 <tr class="a">
 <td align="left">org.apache.maven.plugins</td>
+<td><a class="externalLink" href="https://maven.apache.org/plugins/maven-gpg-plugin/">maven-gpg-plugin</a></td>
+<td>3.0.1</td></tr>
+<tr class="b">
+<td align="left">org.apache.maven.plugins</td>
 <td><a class="externalLink" href="https://maven.apache.org/plugins/maven-install-plugin/">maven-install-plugin</a></td>
 <td>3.0.0-M1</td></tr>
-<tr class="b">
+<tr class="a">
 <td align="left">org.apache.maven.plugins</td>
 <td><a class="externalLink" href="https://maven.apache.org/plugins/maven-site-plugin/">maven-site-plugin</a></td>
 <td>3.10.0</td></tr>
+<tr class="b">
+<td align="left">org.apache.maven.plugins</td>
+<td><a class="externalLink" href="https://maven.apache.org/plugins/maven-source-plugin/">maven-source-plugin</a></td>
+<td>3.2.1</td></tr>
 <tr class="a">
 <td align="left">org.jacoco</td>
 <td><a class="externalLink" href="https://www.jacoco.org/jacoco/trunk/doc/maven.html">jacoco-maven-plugin</a></td>
