--- a/smpp-boot/plugin-updates-report.html
+++ b/smpp-boot/plugin-updates-report.html
@@ -83,7 +83,7 @@
           <ul class="breadcrumb">
         <li id="publishDate">Last Published: 2022-12-29<span class="divider">|</span>
 </li>
-          <li id="projectVersion">Version: 5.3.11</li>
+          <li id="projectVersion">Version: 5.3.12</li>
           </ul>
         </div>
       </header>
@@ -124,7 +124,7 @@
 <tr class="b">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td># of plugins using the latest version available</td>
-<td>45</td></tr>
+<td>46</td></tr>
 <tr class="a">
 <td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is smaller than an incremental version update</td>
@@ -132,15 +132,15 @@
 <tr class="b">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is an incremental version update</td>
-<td>2</td></tr>
+<td>1</td></tr>
 <tr class="a">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is a minor version update</td>
-<td>2</td></tr>
+<td>1</td></tr>
 <tr class="b">
-<td><img src="images/icon_success_sml.gif" alt="" /></td>
+<td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where the next version available is a major version update</td>
-<td>0</td></tr>
+<td>1</td></tr>
 <tr class="a">
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td># of plugins where a dependencies section containes a dependency with an updated version</td>
@@ -451,9 +451,9 @@
 <td><img src="images/icon_warning_sml.gif" alt="" /></td>
 <td>org.apache.maven.plugins</td>
 <td>maven-site-plugin</td>
-<td>3.12.0</td>
+<td>3.12.1</td>
 <td></td>
-<td><b>3.12.1</b></td>
+<td></td>
 <td></td>
 <td><b>4.0.0-M4</b></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
@@ -508,13 +508,13 @@
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
 <tr class="b">
-<td><img src="images/icon_warning_sml.gif" alt="" /></td>
+<td><img src="images/icon_success_sml.gif" alt="" /></td>
 <td>org.apache.rat</td>
 <td>apache-rat-plugin</td>
-<td>0.13</td>
-<td></td>
-<td></td>
 <td><b>0.15</b></td>
+<td></td>
+<td></td>
+<td></td>
 <td></td>
 <td><img src="images/icon_success_sml.gif" alt="" /></td></tr>
 <tr class="a">
@@ -1094,7 +1094,7 @@
 <table border="0" class="table table-striped">
 <tr class="a">
 <th width="30%">Status</th>
-<td align="left"><img src="images/icon_warning_sml.gif" alt="" />&#160;There is at least one newer incremental version available. Incremental updates are typically passive.</td></tr>
+<td align="left"><img src="images/icon_warning_sml.gif" alt="" />&#160;There is at least one newer major version available. Major updates are rarely passive.</td></tr>
 <tr class="b">
 <th width="30%">Group Id</th>
 <td align="left">org.apache.maven.plugins</td></tr>
@@ -1103,10 +1103,10 @@
 <td align="left">maven-site-plugin</td></tr>
 <tr class="b">
 <th width="30%">Current Version</th>
-<td align="left">3.12.0</td></tr>
+<td align="left">3.12.1</td></tr>
 <tr class="a">
 <th width="30%">Newer versions</th>
-<td align="left"><b>3.12.1</b>&#160;<i>Latest Incremental</i><br />4.0.0-M1<br />4.0.0-M2<br />4.0.0-M3<br /><b>4.0.0-M4</b>&#160;<i>Latest Major</i></td></tr></table></section><section>
+<td align="left">4.0.0-M1<br />4.0.0-M2<br />4.0.0-M3<br /><b>4.0.0-M4</b>&#160;<i>Latest Major</i></td></tr></table></section><section>
 <h3><a name="Plugin_org.apache.maven.plugins:maven-source-plugin"></a>Plugin org.apache.maven.plugins:maven-source-plugin</h3>
 <table border="0" class="table table-striped">
 <tr class="a">
@@ -1181,7 +1181,7 @@
 <table border="0" class="table table-striped">
 <tr class="a">
 <th width="30%">Status</th>
-<td align="left"><img src="images/icon_warning_sml.gif" alt="" />&#160;There is at least one newer minor version available. Minor updates are sometimes passive.</td></tr>
+<td align="left"><img src="images/icon_success_sml.gif" alt="" />&#160;No newer versions available.</td></tr>
 <tr class="b">
 <th width="30%">Group Id</th>
 <td align="left">org.apache.rat</td></tr>
@@ -1190,10 +1190,7 @@
 <td align="left">apache-rat-plugin</td></tr>
 <tr class="b">
 <th width="30%">Current Version</th>
-<td align="left">0.13</td></tr>
-<tr class="a">
-<th width="30%">Newer versions</th>
-<td align="left">0.14<br /><b>0.15</b>&#160;<i>Latest Minor</i></td></tr></table></section><section>
+<td align="left">0.15</td></tr></table></section><section>
 <h3><a name="Plugin_org.asciidoctor:asciidoctor-maven-plugin"></a>Plugin org.asciidoctor:asciidoctor-maven-plugin</h3>
 <table border="0" class="table table-striped">
 <tr class="a">
